# gmail-intelligence-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATABASE_ARCHITECTURE.md  DEVELOPERS.md  LAUNCH_CHECKLIST.md  LAUNCH_READY.md  LICENSE  PUSH_INSTRUCTIONS.txt  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  SECRETS_SETUP.md  SUPABASE_SETUP.md  WEEK_1_SUMMARY.md  WEEK_2_SUMMARY.md  config.example.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api-reference.md  architecture.md  deployment.md  getting-started.md
examples/: automated_sync.py  basic_extraction.py  legal_workflow.py
src/gmail_intelligence/: __init__.py  __main__.py
src/gmail_intelligence/analysis/: __init__.py  classifier.py  entity_extractor.py  privilege_detector.py  sentiment.py
src/gmail_intelligence/core/: __init__.py  attachment_handler.py  email_parser.py  extraction_pipeline.py  gmail_api.py  imap_client.py
src/gmail_intelligence/gui/: __init__.py
src/gmail_intelligence/mcp/: __init__.py  server.py
src/gmail_intelligence/search/: __init__.py  filters.py  query_builder.py  semantic_search.py
src/gmail_intelligence/storage/: __init__.py  database.py  file_manager.py  indexer.py  schema.sql  supabase_client.py
src/gmail_intelligence/sync/: __init__.py  error_recovery.py  incremental.py  scheduler.py
src/gmail_intelligence/utils/: __init__.py  config.py  logger.py  progress.py
tests/: __init__.py  conftest.py  test_email_parser.py  test_imap_client.py  test_search.py  test_storage.py
tests/integration/: test_full_extraction.py
