[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-intelligence-platform"
version = "0.1.0"
description = "Unified email extraction, organization, and analysis platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alan Redmond", email = "alanredmond@example.com"}
]
requires-python = ">=3.10"

dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "supabase>=2.4.0",
    "postgrest-py>=0.13.0",
    "aiofiles>=23.0.0",
    "aiosmtplib>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5.0",
]
mcp = [
    "mcp>=0.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
gmail-intelligence = "gmail_intelligence.__main__:main"

[tool.setuptools]
packages = ["gmail_intelligence"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
gmail_intelligence = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/gmail_intelligence --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
